# rest-api-jwt

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: .env.example  db.sqlite3
backend/authentication/: models.py  serializers.py  views.py
backend/authentication/migrations/: 0001_initial.py
backend/conf/: asgi.py  settings.py
